# kimmdy-hat

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  tests.yml
example/alanine_hat/: amber99sb-star-ildnp.ff  kimmdy.yml  md.mdp  md_slow_growth.mdp
src/HATmodels/grappa_models/grappa_250_2_01/grappa_250_2_01.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_01/grappa_250_2_01.tf/variables/: variables.index
src/HATmodels/grappa_models/grappa_250_2_01/tb_grappa_250_2_01/train/: events.out.tfevents.1723565066.cascade-031.cluster.1837873.80.v2
src/HATmodels/grappa_models/grappa_250_2_01/tb_grappa_250_2_01/validation/: events.out.tfevents.1723565069.cascade-031.cluster.1837873.81.v2
src/HATmodels/grappa_models/grappa_250_2_02/grappa_250_2_02.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_02/grappa_250_2_02.tf/variables/: variables.index
src/HATmodels/grappa_models/grappa_250_2_02/tb_grappa_250_2_02/train/: events.out.tfevents.1723565297.cascade-031.cluster.1837873.82.v2
src/HATmodels/grappa_models/grappa_250_2_02/tb_grappa_250_2_02/validation/: events.out.tfevents.1723565302.cascade-031.cluster.1837873.83.v2
src/HATmodels/grappa_models/grappa_250_2_03/grappa_250_2_03.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_03/grappa_250_2_03.tf/variables/: variables.index
src/HATmodels/grappa_models/grappa_250_2_03/tb_grappa_250_2_03/train/: events.out.tfevents.1723565533.cascade-031.cluster.1837873.84.v2
src/HATmodels/grappa_models/grappa_250_2_03/tb_grappa_250_2_03/validation/: events.out.tfevents.1723565536.cascade-031.cluster.1837873.85.v2
src/HATmodels/grappa_models/grappa_250_2_04/grappa_250_2_04.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_04/grappa_250_2_04.tf/variables/: variables.index
src/HATmodels/grappa_models/grappa_250_2_05/grappa_250_2_05.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_05/grappa_250_2_05.tf/variables/: variables.index
src/HATmodels/grappa_models/grappa_250_2_06/grappa_250_2_06.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_07/grappa_250_2_07.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_08/grappa_250_2_08.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_09/grappa_250_2_09.tf/: saved_model.pb
src/HATmodels/grappa_models/grappa_250_2_10/grappa_250_2_10.tf/: saved_model.pb
src/HATmodels/model_1_01/: hparas.json
src/HATmodels/model_1_01/model_1_01.tf/: keras_metadata.pb  saved_model.pb
src/HATmodels/model_1_01/model_1_01.tf/variables/: variables.index
src/HATmodels/model_1_01/tb_model_1_01/train/: events.out.tfevents.1659599638.rh04527.villa-bosch.de.7910.0.v2
src/HATmodels/model_1_01/tb_model_1_01/validation/: events.out.tfevents.1659599656.rh04527.villa-bosch.de.7910.1.v2
src/HATreaction/: __init__.py  cmd.py  kimmdy-yaml-schema.json  reaction.py  save_predictions_only.py
src/HATreaction/utils/: capping_utils.py  input_generation.py  radical_creation_utils.py  trajectory_utils.py  utils.py
src/kimmdy_hat/: reaction.py
test/: test_capping.py  test_draft.py  test_traj.py
test/test_capping_io/: ace1.json  bridged.json
tests/: test_capping.py  test_configuration.py  test_rad_pos.py  test_traj.py
tests/test_capping_io/: 30410.json  47855.json  69284.json  8205.json  90642.json  beside_ace_glu.json  beside_nme_glu.json  nme1.json
tests/test_rad_pos/: reference.json
tests/test_traj_io/: .equilibrium1.trr_offsets.npz  dopa_pbc.gro  dopa_pbc.tpr  dopa_pbc.trr  equilibrium1.tpr  equilibrium1.trr
(+19 files in other folders)
