[metadata]
name = HATreaction
version = 0.1
license = MIT
description = Plugin for KIMMDY
long_description = file: README.md
author = Kai Riedmiller
author_email = kai.riedmiller@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    ase
    numpy<=1.23
    kgcnn==2.0.0
    kimmdy
    MDAnalysis

python_requires = >= 3.9
   
[options.packages.find]
where=src

[options.entry_points]
kimmdy.plugins =
    hat_reaction = HATreaction.reaction:HAT_reaction