[metadata]
name = HATreaction
version = 0.2
license = MIT
description = Plugin for KIMMDY
long_description = file: README.md
author = Kai Riedmiller
author_email = kai.riedmiller@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    ase
    numpy<=1.23
    kgcnn==2.1.0
    MDAnalysis>=2.5.0

python_requires = >= 3.9
   
[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    HAT_reaction = kimmdy.cmd:kimmdy
kimmdy.reaction_plugins =
    hat_reaction = HATreaction.reaction:HAT_reaction
